; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic79xx.c_ahd_done_with_status.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/aic7xxx/extr_aic79xx.c_ahd_done_with_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ahd_softc = type { i32 }
%struct.scb = type { i32 }

@CAM_REQ_INPROG = common dso_local global i64 0, align 8
@CAM_REQ_CMP = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ahd_done_with_status(%struct.ahd_softc* %0, %struct.scb* %1, i32 %2) #0 {
  %4 = alloca %struct.ahd_softc*, align 8
  %5 = alloca %struct.scb*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.ahd_softc* %0, %struct.ahd_softc** %4, align 8
  store %struct.scb* %1, %struct.scb** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load %struct.scb*, %struct.scb** %5, align 8
  %10 = call i64 @aic_get_transaction_status(%struct.scb* %9)
  store i64 %10, i64* %7, align 8
  %11 = load i64, i64* %7, align 8
  %12 = load i64, i64* @CAM_REQ_INPROG, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %14, label %18

14:                                               ; preds = %3
  %15 = load %struct.scb*, %struct.scb** %5, align 8
  %16 = load i32, i32* %6, align 4
  %17 = call i32 @aic_set_transaction_status(%struct.scb* %15, i32 %16)
  br label %18

18:                                               ; preds = %14, %3
  %19 = load %struct.scb*, %struct.scb** %5, align 8
  %20 = call i64 @aic_get_transaction_status(%struct.scb* %19)
  store i64 %20, i64* %8, align 8
  %21 = load i64, i64* %8, align 8
  %22 = load i64, i64* @CAM_REQ_CMP, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %27

24:                                               ; preds = %18
  %25 = load %struct.scb*, %struct.scb** %5, align 8
  %26 = call i32 @aic_freeze_scb(%struct.scb* %25)
  br label %27

27:                                               ; preds = %24, %18
  %28 = load %struct.ahd_softc*, %struct.ahd_softc** %4, align 8
  %29 = load %struct.scb*, %struct.scb** %5, align 8
  %30 = call i32 @ahd_done(%struct.ahd_softc* %28, %struct.scb* %29)
  ret void
}

declare dso_local i64 @aic_get_transaction_status(%struct.scb*) #1

declare dso_local i32 @aic_set_transaction_status(%struct.scb*, i32) #1

declare dso_local i32 @aic_freeze_scb(%struct.scb*) #1

declare dso_local i32 @ahd_done(%struct.ahd_softc*, %struct.scb*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
